--- a/index.html
+++ b/index.html
@@ -81,6 +81,109 @@
                 <tr><td>6</td><td>Internet Connectivity</td><td>Optimize city-wide Wi-Fi.</td><td>XYA</td><td>Minimum Spanning Tree</td></tr>
             </tbody>
         </table>
+         <h1><strong>Introduction to the Business Cases</strong></h1>
+
+    <h2><strong>1. Predicting Optimal Tourist Routes (Varun T)</strong></h2>
+    <p><strong>This initiative focuses on developing a system that leverages real-time data like traffic conditions, crowd density, and user preferences to recommend ideal travel routes for tourists.</strong> Using graph-based algorithms, the system ensures that visitors have a seamless and enjoyable experience while reducing the pressure on popular tourist locations. By optimizing routes, it also supports sustainable urban tourism and enhances the visibility of lesser-known attractions.</p>
+
+    <h3><strong>Sustainable Goals:</strong></h3>
+    <ul>
+        <li><strong>Distributes tourism traffic evenly to prevent overcrowding and environmental degradation at popular sites.</strong></li>
+        <li><strong>Encourages the use of sustainable transport modes, reducing the carbon footprint of travel.</strong></li>
+        <li><strong>Enhances accessibility to cultural and natural heritage sites, fostering inclusive tourism.</strong></li>
+    </ul>
+
+    <h3><strong>Challenges in Implementation:</strong></h3>
+    <ul>
+        <li><strong>Integrating diverse data sources like GPS, weather, and user preferences into a unified system.</strong></li>
+        <li><strong>Balancing system performance and accuracy for real-time route optimization.</strong></li>
+        <li><strong>Ensuring privacy and security while collecting and processing user data.</strong></li>
+    </ul>
+
+    <h2><strong>2. Sorting Menu Items (Vishal H)</strong></h2>
+    <p><strong>Sorting menu items efficiently is crucial for e-commerce and digital platforms in food and retail industries.</strong> This system uses quick sort and array structures to organize items based on price or popularity, offering a streamlined and intuitive interface for users. By dynamically updating sorting criteria based on real-time data, the solution ensures an enhanced customer experience and supports better decision-making.</p>
+
+    <h3><strong>Sustainable Goals:</strong></h3>
+    <ul>
+        <li><strong>Promotes informed consumer choices by highlighting affordable or eco-friendly options.</strong></li>
+        <li><strong>Reduces decision-making time, indirectly contributing to efficient resource utilization in retail and food services.</strong></li>
+        <li><strong>Supports sustainable consumption patterns by surfacing locally sourced or seasonal items.</strong></li>
+    </ul>
+
+    <h3><strong>Challenges in Implementation:</strong></h3>
+    <ul>
+        <li><strong>Adapting to changes in popularity or pricing in real-time without significant delays.</strong></li>
+        <li><strong>Scaling efficiently for platforms with extensive and diverse catalogs.</strong></li>
+        <li><strong>Addressing algorithm biases to ensure fair representation of all menu items.</strong></li>
+    </ul>
+
+    <h2><strong>3. Monitoring Traffic Flow (Saif Ali)</strong></h2>
+    <p><strong>Managing traffic density at critical intersections is essential for promoting vehicle-free smart cities.</strong> This case employs graph traversal algorithms like BFS and DFS to analyze traffic patterns, identify bottlenecks, and propose alternate routes. The solution supports proactive traffic management, ensuring smoother flow and reducing environmental impact.</p>
+
+    <h3><strong>Sustainable Goals:</strong></h3>
+    <ul>
+        <li><strong>Minimizes emissions by reducing idle times at congested intersections.</strong></li>
+        <li><strong>Supports active commuting methods like walking and cycling by optimizing pathways.</strong></li>
+        <li><strong>Enhances urban mobility while aligning with goals for sustainable cities and communities.</strong></li>
+    </ul>
+
+    <h3><strong>Challenges in Implementation:</strong></h3>
+    <ul>
+        <li><strong>High dependency on IoT infrastructure for accurate data collection.</strong></li>
+        <li><strong>Real-time analysis of large datasets from sensors and cameras.</strong></li>
+        <li><strong>Overcoming resistance from commuters used to traditional traffic systems.</strong></li>
+    </ul>
+
+    <h2><strong>4. Optimizing Waste Management Routes (Suleman A)</strong></h2>
+    <p><strong>Efficient waste collection is vital for urban hygiene and sustainability.</strong> This system applies Dijkstra's Algorithm to determine optimal routes for waste collection vehicles, minimizing fuel consumption and travel time. It not only reduces operational costs but also contributes to lower emissions, supporting green city initiatives.</p>
+
+    <h3><strong>Sustainable Goals:</strong></h3>
+    <ul>
+        <li><strong>Lowers fuel consumption and carbon emissions by streamlining waste collection routes.</strong></li>
+        <li><strong>Reduces operational costs, enabling reinvestment in other sustainability initiatives.</strong></li>
+        <li><strong>Prevents missed waste pickups, promoting cleaner neighborhoods and efficient waste management.</strong></li>
+    </ul>
+
+    <h3><strong>Challenges in Implementation:</strong></h3>
+    <ul>
+        <li><strong>Handling dynamic changes like roadblocks or unexpected waste accumulation.</strong></li>
+        <li><strong>Collecting and updating accurate data on waste generation across neighborhoods.</strong></li>
+        <li><strong>Ensuring system compatibility with existing waste management infrastructure.</strong></li>
+    </ul>
+
+    <h2><strong>5. Monitoring Water Usage in Residential Areas (Varun & Vishal)</strong></h2>
+    <p><strong>Water conservation is a critical concern in urban planning.</strong> This system tracks and analyzes residential water usage patterns using time-series analysis. By identifying trends and irregularities, it provides actionable insights for policymakers and promotes responsible water consumption among residents.</p>
+
+    <h3><strong>Sustainable Goals:</strong></h3>
+    <ul>
+        <li><strong>Identifies wasteful water usage patterns, supporting conservation efforts.</strong></li>
+        <li><strong>Promotes equitable water distribution across neighborhoods.</strong></li>
+        <li><strong>Aligns with SDG Goal 6: Clean Water and Sanitation by fostering efficient water use.</strong></li>
+    </ul>
+
+    <h3><strong>Challenges in Implementation:</strong></h3>
+    <ul>
+        <li><strong>Collecting accurate and granular data without invading privacy.</strong></li>
+        <li><strong>Analyzing seasonal or situational fluctuations in water usage.</strong></li>
+        <li><strong>Encouraging residents to adopt water-saving practices based on insights.</strong></li>
+    </ul>
+
+    <h2><strong>6. Optimizing City-Wide Internet Connectivity (Saif & Suleman)</strong></h2>
+    <p><strong>Reliable internet connectivity is foundational to smart cities.</strong> This initiative maps and optimizes the placement of Wi-Fi hotspots using minimum spanning tree algorithms. By ensuring high-speed connectivity and minimizing redundant infrastructure, the system enhances digital inclusivity and supports the city's technological growth.</p>
+
+    <h3><strong>Sustainable Goals:</strong></h3>
+    <ul>
+        <li><strong>Ensures equitable access to internet resources, bridging the digital divide.</strong></li>
+        <li><strong>Reduces infrastructure redundancy, supporting efficient resource utilization.</strong></li>
+        <li><strong>Promotes digital inclusion, enabling access to e-services for all city residents.</strong></li>
+    </ul>
+
+    <h3><strong>Challenges in Implementation:</strong></h3>
+    <ul>
+        <li><strong>Balancing high-speed connectivity with cost-effective deployment of Wi-Fi hotspots.</strong></li>
+        <li><strong>Addressing challenges in mapping dense urban areas with complex layouts.</strong></li>
+        <li><strong>Ensuring network reliability during peak usage hours or adverse conditions.</strong></li>
+    </ul>
     </section>
 
     <section id="More Information">
