--- a/index.html
+++ b/index.html
@@ -73,17 +73,17 @@
                 </tr>
             </thead>
             <tbody>
-                <tr><td>1</td><td>Optimal Tourist Routes</td><td>Route optimization for tourists.</td><td>ABC</td><td>Graphs</td></tr>
-                <tr><td>2</td><td>Menu Item Sorting</td><td>Sort menus by price/popularity.</td><td>WXY</td><td>Quick Sort</td></tr>
-                <tr><td>3</td><td>Traffic Monitoring</td><td>Analyze intersection traffic density.</td><td>DEF</td><td>BFS, DFS</td></tr>
-                <tr><td>4</td><td>Waste Management</td><td>Efficient waste collection routes.</td><td>ABC</td><td>Dijkstra's</td></tr>
-                <tr><td>5</td><td>Water Usage</td><td>Residential water analysis.</td><td>JKL</td><td>Time Series</td></tr>
-                <tr><td>6</td><td>Internet Connectivity</td><td>Optimize city-wide Wi-Fi.</td><td>XYA</td><td>Minimum Spanning Tree</td></tr>
+                <tr><td>1</td><td>Optimal Tourist Routes</td><td>Route optimization for tourists.</td><td>Varun S T</td><td>Graphs</td></tr>
+                <tr><td>2</td><td>Menu Item Sorting</td><td>Sort menus by price/popularity.</td><td>Vishal U H</td><td>Quick Sort</td></tr>
+                <tr><td>3</td><td>Traffic Monitoring</td><td>Analyze intersection traffic density.</td><td>Saif Ali</td><td>BFS, DFS</td></tr>
+                <tr><td>4</td><td>Waste Management</td><td>Efficient waste collection routes.</td><td>Suleman A</td><td>Dijkstra's</td></tr>
+                <tr><td>5</td><td>Water Usage</td><td>Residential water analysis.</td><td>Vishal and Varun</td><td>Time Series</td></tr>
+                <tr><td>6</td><td>Internet Connectivity</td><td>Optimize city-wide Wi-Fi.</td><td>Saif and Suleman</td><td>Minimum Spanning Tree</td></tr>
             </tbody>
         </table>
          <h1><strong>Introduction to the Business Cases</strong></h1>
 
-    <h2><strong>1. Predicting Optimal Tourist Routes (Varun T)</strong></h2>
+    <h2><strong>1. Predicting Optimal Tourist Routes (Varun S T)</strong></h2>
     <p><strong>This initiative focuses on developing a system that leverages real-time data like traffic conditions, crowd density, and user preferences to recommend ideal travel routes for tourists.</strong> Using graph-based algorithms, the system ensures that visitors have a seamless and enjoyable experience while reducing the pressure on popular tourist locations. By optimizing routes, it also supports sustainable urban tourism and enhances the visibility of lesser-known attractions.</p>
 
     <h3><strong>Sustainable Goals:</strong></h3>
@@ -100,7 +100,7 @@
         <li><strong>Ensuring privacy and security while collecting and processing user data.</strong></li>
     </ul>
 
-    <h2><strong>2. Sorting Menu Items (Vishal H)</strong></h2>
+    <h2><strong>2. Sorting Menu Items (Vishal U H)</strong></h2>
     <p><strong>Sorting menu items efficiently is crucial for e-commerce and digital platforms in food and retail industries.</strong> This system uses quick sort and array structures to organize items based on price or popularity, offering a streamlined and intuitive interface for users. By dynamically updating sorting criteria based on real-time data, the solution ensures an enhanced customer experience and supports better decision-making.</p>
 
     <h3><strong>Sustainable Goals:</strong></h3>
