--- a/index.html
+++ b/index.html
@@ -197,6 +197,11 @@
         <img src="https://i.ibb.co/W6FNqyd/projdaa.png" alt="KWIN City Map" style="width: 100%; max-width: 600px; border-radius: 8px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);">
     </section>
 
+     <section id="PPS">
+        <h2>Problem Statement</h2>
+        <p>data-driven urban planning system for smart cities with minimal vehicle usage. It will use efficient data structures and algorithms to optimize transportation, resource management, and governance while promoting environmental sustainability and enhancing tourism opportunities. The system will focus on leveraging real-time data and predictive analytics to ensure efficient, eco-friendly city operations.</p>  </section>
+
+    
     <section>
       <h2>Team Members</h2>
 
