--- a/index.html
+++ b/index.html
@@ -62,25 +62,26 @@
 
     <section id="business-ideas" style="display: none;">
         <h2>Business Ideas</h2>
-        <table>
-            <thead>
-                <tr>
-                    <th>SLNO</th>
-                    <th>Business Case</th>
-                    <th>Description</th>
-                    <th>Owner</th>
-                    <th>Tools</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr><td>1</td><td>Optimal Tourist Routes</td><td>Route optimization for tourists.</td><td>Varun S T</td><td>Graphs</td></tr>
-                <tr><td>2</td><td>Menu Item Sorting</td><td>Sort menus by price/popularity.</td><td>Vishal U H</td><td>Quick Sort</td></tr>
-                <tr><td>3</td><td>Traffic Monitoring</td><td>Analyze intersection traffic density.</td><td>Saif Ali</td><td>BFS, DFS</td></tr>
-                <tr><td>4</td><td>Waste Management</td><td>Efficient waste collection routes.</td><td>Suleman A</td><td>Dijkstra's</td></tr>
-                <tr><td>5</td><td>Water Usage</td><td>Residential water analysis.</td><td>Vishal and Varun</td><td>Time Series</td></tr>
-                <tr><td>6</td><td>Internet Connectivity</td><td>Optimize city-wide Wi-Fi.</td><td>Saif and Suleman</td><td>Minimum Spanning Tree</td></tr>
-            </tbody>
-        </table>
+       <table>
+    <thead>
+        <tr>
+            <th>SLNO</th>
+            <th>Business Case</th>
+            <th>Description</th>
+            <th>Owner</th>
+            <th>Tools</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr><td>1</td><td>Optimal Tourist Routes</td><td>Route optimization for tourists.</td><td>Varun S T</td><td>Graphs</td></tr>
+        <tr><td>2</td><td>Menu Item Sorting</td><td>Sort menus by price/popularity.</td><td>Vishal U H</td><td>Quick Sort</td></tr>
+        <tr><td>3</td><td>Traffic Monitoring</td><td>Analyze intersection traffic density.</td><td>Saif Ali</td><td>BFS, DFS</td></tr>
+        <tr><td>4</td><td>Waste Management</td><td>Efficient waste collection routes.</td><td>Suleman A</td><td>Dijkstra's</td></tr>
+        <tr><td>5</td><td>Water Usage</td><td>Residential water analysis.</td><td>Vishal and Varun</td><td>Time Series</td></tr>
+        <tr><td>6</td><td>Internet Connectivity</td><td>Optimize city-wide Wi-Fi.</td><td>Saif and Suleman</td><td>Minimum Spanning Tree</td></tr>
+    </tbody>
+</table>
+
          <h1><strong>Introduction to the Business Cases</strong></h1>
 
     <h2><strong>1. Predicting Optimal Tourist Routes (Varun S T)</strong></h2>
@@ -207,7 +208,7 @@
 
 <!-- Vishal U H -->
 <br>
-<button class="button" onclick="toggleInfo('vishal-reflections')">01fe23bci065 . (130) Vishal U H</button><br>
+<button class="button" onclick="toggleInfo('vishal-reflections')">01fe23bci065 - 130 - Vishal U H</button><br>
 <section id="vishal-reflections" style="display: none;">
     <h2>Course Reflections - Vishal U H</h2>
     <ol>
@@ -217,7 +218,7 @@
 
 <!-- Varun S T -->
 <br>
-<button class="button" onclick="toggleInfo('varun-reflections')">01fe23bci068 . (131) Varun Terdal</button><br>
+<button class="button" onclick="toggleInfo('varun-reflections')">01fe23bci068 - 131 - Varun Terdal</button><br>
 <section id="varun-reflections" style="display: none;">
     <h2>Course Reflections - Varun S T</h2>
     <ol>
@@ -337,7 +338,7 @@
 
 <!-- Suleman A -->
 <br>
-<button class="button" onclick="toggleInfo('suleman-reflections')">01fe23bci071 . (133) Suleman A</button><br>
+<button class="button" onclick="toggleInfo('suleman-reflections')">01fe23bci071 - 133 - Suleman A</button><br>
 <section id="suleman-reflections" style="display: none;">
     <h2>Course Reflections - Suleman A</h2>
     <ol>
@@ -452,7 +453,7 @@
 
 <!-- Saif Ali -->
 <br>
-<button class="button" onclick="toggleInfo('saif-reflections')">01fe23bci008 . (158) Saif Ali</button><br>
+<button class="button" onclick="toggleInfo('saif-reflections')">01fe23bci008 - 158 - Saif Ali</button><br>
 <section id="saif-reflections" style="display: none;">
     <h2>Course Reflections - Saif Ali</h2>
     <ol>
