--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <p>
         The "Design and Analysis of Algorithms" course emphasizes understanding, designing, and evaluating algorithms to solve computational problems effectively. It delves into topics such as recursion, graph algorithms, sorting and searching, and advanced data structures like trees and heaps. Students gain skills in analyzing algorithm efficiency in terms of time and space complexity, applying these methods to real-world problems, and building a strong foundation for tackling advanced computing challenges.
     </p>
-    <h2>What kind of data structures and algorithms have you studied?</h2>
+ <br>   <h2>What kind of data structures and algorithms have you studied?</h2>
 
     <h3>Data Structures:</h3>
     <ul>
@@ -51,7 +51,7 @@
         <li><strong>Undecidability:</strong> Exploring problems with no algorithmic solutions (e.g., Halting Problem)</li>
     </ul>
 
-    <h2>How do you connect the course with real-time applications?</h2>
+   <br> <h2>How do you connect the course with real-time applications?</h2>
     <ul>
         <li><strong>Graph Algorithms:</strong> Employ Dijkstra's or Kruskal's algorithms to optimize routes in transportation networks or telecommunication systems.</li>
         <li><strong>Sorting and Searching:</strong> Use efficient algorithms for inventory management and fast product searches in e-commerce platforms.</li>
@@ -84,7 +84,7 @@
 
          <h1><strong>Introduction to the Business Cases</strong></h1>
 
-    <h2><strong>1. Predicting Optimal Tourist Routes (Varun S T)</strong></h2>
+  <br>  <h2><strong>1. Predicting Optimal Tourist Routes (Varun S T)</strong></h2>
     <p><strong>This initiative focuses on developing a system that leverages real-time data like traffic conditions, crowd density, and user preferences to recommend ideal travel routes for tourists.</strong> Using graph-based algorithms, the system ensures that visitors have a seamless and enjoyable experience while reducing the pressure on popular tourist locations. By optimizing routes, it also supports sustainable urban tourism and enhances the visibility of lesser-known attractions.</p>
 
     <h3><strong>Sustainable Goals:</strong></h3>
@@ -101,7 +101,7 @@
         <li><strong>Ensuring privacy and security while collecting and processing user data.</strong></li>
     </ul>
 
-    <h2><strong>2. Sorting Menu Items (Vishal U H)</strong></h2>
+    <br><h2><strong>2. Sorting Menu Items (Vishal U H)</strong></h2>
     <p><strong>Sorting menu items efficiently is crucial for e-commerce and digital platforms in food and retail industries.</strong> This system uses quick sort and array structures to organize items based on price or popularity, offering a streamlined and intuitive interface for users. By dynamically updating sorting criteria based on real-time data, the solution ensures an enhanced customer experience and supports better decision-making.</p>
 
     <h3><strong>Sustainable Goals:</strong></h3>
@@ -118,7 +118,7 @@
         <li><strong>Addressing algorithm biases to ensure fair representation of all menu items.</strong></li>
     </ul>
 
-    <h2><strong>3. Monitoring Traffic Flow (Saif Ali)</strong></h2>
+    <br><h2><strong>3. Monitoring Traffic Flow (Saif Ali)</strong></h2>
     <p><strong>Managing traffic density at critical intersections is essential for promoting vehicle-free smart cities.</strong> This case employs graph traversal algorithms like BFS and DFS to analyze traffic patterns, identify bottlenecks, and propose alternate routes. The solution supports proactive traffic management, ensuring smoother flow and reducing environmental impact.</p>
 
     <h3><strong>Sustainable Goals:</strong></h3>
@@ -135,7 +135,7 @@
         <li><strong>Overcoming resistance from commuters used to traditional traffic systems.</strong></li>
     </ul>
 
-    <h2><strong>4. Optimizing Waste Management Routes (Suleman A)</strong></h2>
+    <br><h2><strong>4. Optimizing Waste Management Routes (Suleman A)</strong></h2>
     <p><strong>Efficient waste collection is vital for urban hygiene and sustainability.</strong> This system applies Dijkstra's Algorithm to determine optimal routes for waste collection vehicles, minimizing fuel consumption and travel time. It not only reduces operational costs but also contributes to lower emissions, supporting green city initiatives.</p>
 
     <h3><strong>Sustainable Goals:</strong></h3>
@@ -152,7 +152,7 @@
         <li><strong>Ensuring system compatibility with existing waste management infrastructure.</strong></li>
     </ul>
 
-    <h2><strong>5. Monitoring Water Usage in Residential Areas (Varun & Vishal)</strong></h2>
+    <br><h2><strong>5. Monitoring Water Usage in Residential Areas (Varun & Vishal)</strong></h2>
     <p><strong>Water conservation is a critical concern in urban planning.</strong> This system tracks and analyzes residential water usage patterns using time-series analysis. By identifying trends and irregularities, it provides actionable insights for policymakers and promotes responsible water consumption among residents.</p>
 
     <h3><strong>Sustainable Goals:</strong></h3>
@@ -169,7 +169,7 @@
         <li><strong>Encouraging residents to adopt water-saving practices based on insights.</strong></li>
     </ul>
 
-    <h2><strong>6. Optimizing City-Wide Internet Connectivity (Saif & Suleman)</strong></h2>
+   <br> <h2><strong>6. Optimizing City-Wide Internet Connectivity (Saif & Suleman)</strong></h2>
     <p><strong>Reliable internet connectivity is foundational to smart cities.</strong> This initiative maps and optimizes the placement of Wi-Fi hotspots using minimum spanning tree algorithms. By ensuring high-speed connectivity and minimizing redundant infrastructure, the system enhances digital inclusivity and supports the city's technological growth.</p>
 
     <h3><strong>Sustainable Goals:</strong></h3>
@@ -332,7 +332,7 @@
         <strong>Traveling Salesman Problem (TSP)</strong> can be tackled using approximation algorithms that find a solution close to the optimal path, 
         even if it’s not guaranteed to be the best one. This trade-off is acceptable in many real-world applications where an exact solution is 
         unnecessary, and time constraints make finding the optimal solution impractical.
-    </p>>
+    </p>
     </ol>
 </section>
 
