--- a/index.html
+++ b/index.html
@@ -188,9 +188,38 @@
     </section>
 
     <section id="More Information">
-        <h2>About KWIN City</h2>
-        <p>KWIN City is a future-focused urban environment emphasizing sustainability, collaboration, and growth. Strategically located 45 minutes from Kempegowda International Airport, it’s well-connected for global and regional development.</p>
+       <header>
+        <h1>KWIN City: Journey On with Conviction</h1>
+    </header>
+
+    <section id="city-vision">
+        <h2><b>A City for Tomorrow</b></h2>
+        <p>KWIN City is built with tomorrow in mind, designed to bring a better future today. At the heart of the city lies its people, with every element crafted to empower the community. Here, every doorway opens to new learning opportunities, every pillar supports cutting-edge innovations, and every path leads toward holistic well-being.</p>
     </section>
+
+    <section id="core-values">
+        <h2><b>Core Values: A Mindful Social Framework</b></h2>
+        <p>KWIN City is not just a place, but a community built on values that matter. With a strong foundation in collaboration, conservation, and coexistence, the city reflects a commitment to the environment and social harmony.</p>
+    </section>
+
+    <section id="green-future">
+        <h2><b>A Green, People-Centric Future</b></h2>
+        <p>Our city is rich in green promises, creating a sustainable environment where nature and people coexist seamlessly. KWIN isn’t just designed for the future; it is designed by and for the people, making it a destination like no other. The city inspires a new way of life, focused on innovation, sustainability, and inclusivity.</p>
+    </section>
+
+    <section id="strategic-location">
+        <h2><b>Strategic Location: Connecting to the World</b></h2>
+        <p><b>Well-Connected, Convenient, and Accessible</b></p>
+        <p>KWIN City enjoys a prime location strategically positioned between <b>Doddaballapur</b> and <b>Dobbaspet</b>, ensuring easy access to key regions. Just <b>45 minutes from Kempegowda International Airport</b>, the city is well-connected by major transportation routes.</p>
+
+        <ul>
+            <li><b>Bangalore-Hubli-Mumbai Express Rail Route</b>: Ensuring seamless rail connectivity to critical hubs.</li>
+            <li><b>National Highways 44 and 648</b>: Providing excellent road access to and from the city.</li>
+        </ul>
+
+        <p>With this connectivity, KWIN City is perfectly situated for regional and global growth, making it an ideal place for business, innovation, and community.</p>
+    </section>
+</section>
 
     <section id="city-map">
         <h2>City Map</h2>
