--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <nav>
         <button class="button" onclick="toggleInfo('course-intro')">Course Introduction</button>
-        <button class="button" onclick="toggleInfo('business-ideas')">Business Ideas</button>
+        
     </nav>
 
     <section id="course-intro" style="display: none;">
@@ -222,9 +222,9 @@
         <h2>Problem Statement</h2>
         <p>data-driven urban planning system for smart cities with minimal vehicle usage. It will use efficient data structures and algorithms to optimize transportation, resource management, and governance while promoting environmental sustainability and enhancing tourism opportunities. The system will focus on leveraging real-time data and predictive analytics to ensure efficient, eco-friendly city operations.</p>  </section>
 
-    
+    <button class="button" onclick="toggleInfo('business-ideas')">Business Ideas</button>
     <section>
-      <h2>Team Members</h2>
+      <br><h2>Team Members</h2>
 
 <!-- Vishal U H -->
 <br>
