--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
         <li><strong>Optimization Problems:</strong> Address real-world scenarios, such as resource allocation in project management, using the Knapsack problem.</li>
     </ul>
     </section>
+       <section id="PPS">
+        <h2>Problem Statement</h2>
+        <p>data-driven urban planning system for smart cities with minimal vehicle usage. It will use efficient data structures and algorithms to optimize transportation, resource management, and governance while promoting environmental sustainability and enhancing tourism opportunities. The system will focus on leveraging real-time data and predictive analytics to ensure efficient, eco-friendly city operations.</p>  </section>
+    </section>
 
     <section id="business-ideas" style="display: none;">
         <h2>Business Ideas</h2>
@@ -218,10 +222,7 @@
         <img src="https://i.ibb.co/W6FNqyd/projdaa.png" alt="KWIN City Map" style="width: 100%; max-width: 600px; border-radius: 8px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);">
     </section>
 
-     <section id="PPS">
-        <h2>Problem Statement</h2>
-        <p>data-driven urban planning system for smart cities with minimal vehicle usage. It will use efficient data structures and algorithms to optimize transportation, resource management, and governance while promoting environmental sustainability and enhancing tourism opportunities. The system will focus on leveraging real-time data and predictive analytics to ensure efficient, eco-friendly city operations.</p>  </section>
-
+  
     <button class="button" onclick="toggleInfo('business-ideas')">Business Ideas</button>
     <section>
       <br><h2>Team Members</h2>
