--- a/index.html
+++ b/index.html
@@ -217,13 +217,14 @@
 </section>
 
     <section id="city-map">
-        <h2>City Map</h2>
+        <h1>City Map</h1>
         <p>Explore the layout of KWIN City.</p>
         <img src="https://i.ibb.co/W6FNqyd/projdaa.png" alt="KWIN City Map" style="width: 100%; max-width: 600px; border-radius: 8px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);">
     </section>
 
-  
+  <nav>
     <button class="button" onclick="toggleInfo('business-ideas')">Business Ideas</button>
+  </nav>
     <section>
       <br><h2>Team Members</h2>
 
