--- a/index.html
+++ b/index.html
@@ -575,15 +575,13 @@
         business needs, while collaboration allows for the sharing of knowledge, ideas, and strategies that can lead to a more efficient solution.
     </p>
     </ol>
-</section>
+<</section>
  <nav>
-    <button class="button" onclick="toggleInfo('code-ideas')">Business Ideas</button>
+    <button class="button" onclick="toggleInfo('code-ideas')">C++ CODE</button>
   </nav>
      <section id="code-ideas" style="display: none;">
         <h2>IMPLEMENTATION OF CODE </h2>
        
-
-    <h1>C++ Code Example</h1>
 
     <pre><code>
 #include &lt;iostream&gt;
