--- a/index.html
+++ b/index.html
@@ -799,8 +799,9 @@ int main() {
 }
     </code></pre>
      </section>
+        
     <footer>
-        <p>&copy; 2024 KWIN City | Designed by Students of KLE Technological University</p>
+        <p>&copy; 2024 KWIN City | Designed by Varun of KLE Technological University</p>
     </footer>
 </body>
 </html>
