--- a/index.html
+++ b/index.html
@@ -801,7 +801,7 @@ int main() {
      </section>
         
     <footer>
-        <p>&copy; 2024 KWIN City | Designed by Varun of KLE Technological University</p>
+        <p>&copy; 2024 KWIN City | Designed by Students of KLE Technological University</p>
     </footer>
 </body>
 </html>
