--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
     <h3>Anxiety and Imposter Syndrome</h3>
     <p>
         The complexity of algorithms can sometimes make students feel like they are not capable of mastering them. This can lead to self-doubt 
-        and the fear of not measuring up to peers or instructors. Overcoming these feelings is crucial for staying motivated and continuing to learn.
+        and the fear of not measuring up to peers or instructors. Overcoming these feelings is crucial for staying motivated and continuing to learn
     </p>
 
     <h3>Cognitive Load</h3>
